added cache-busters for scripts

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 
 
-<script src="ellipsis-comma-load.js"></script>
-<script src="carcinise-light.js"></script>
+<script src="ellipsis-comma-load.js?v=2024-11-21"></script>
+<script src="carcinise-light.js?v=2024-11-21"></script>
 </body>
 </html>
