improved <abbr> spacing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="preload" type="font/woff2" href="./fonts/PTSerif-Regular-ellipsisComma.woff2?v=2024-11-21" as="font" crossorigin>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" media="screen" href="./main.css?v=2024-11-24">
+	<link rel="stylesheet" type="text/css" media="screen" href="./main.css?v=2024-11-24b">
 
 	<link rel="icon" href="./images/favicon.svg?v=2024-11-22" type="image/svg+xml" sizes="any">
 	<link rel="icon" href="./images/favicon-light.ico?v=2024-11-22" sizes="48x48" media="(prefers-color-scheme:light)">
@@ -67,7 +67,7 @@
 		<dt>Previously</dt>
 		<dd><abbr>PHP</abbr>, <abbr>MySQL</abbr>, MATLAB</dd>
 	</dl>
-	<p>I'm also proficient with QLab, Glyphs, and the Affinity suite (Publisher, Designer, Photo).</p>
+	<p>I'm also proficient with <abbr>QLab</abbr>, Glyphs, and the Affinity suite (Publisher, Designer, Photo).</p>
 
 	<h2>GitHub repos</h2>
 	<dl class="info-blocks">
