added social card

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 	<link rel="icon" href="./images/favicon.svg?v=2024-11-22" type="image/svg+xml" sizes="any">
 	<link rel="icon" href="./images/favicon-light.ico?v=2024-11-22" sizes="48x48" media="(prefers-color-scheme:light)">
 	<link rel="icon" href="./images/favicon-dark.ico?v=2024-11-22" sizes="48x48" media="(prefers-color-scheme:dark)">
+
+	<meta name="og:image" 		content="https://ellipsiscomma.com/images/social-card.png">
+	<meta name="twitter:card" 	content="summary">
 </head>
 
 
