split devtool bookmarklets into github gists

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="preload" type="font/woff2" href="./fonts/PTSerif-Regular-ellipsisComma.woff2?v=2024-11-21" as="font" crossorigin>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" media="screen" href="./main.css?v=2024-11-24d">
+	<link rel="stylesheet" type="text/css" media="screen" href="./main.css?v=2024-11-25">
 
 	<link rel="icon" href="./images/favicon.svg?v=2024-11-22" type="image/svg+xml" sizes="any">
 	<link rel="icon" href="./images/favicon-light.ico?v=2024-11-22" sizes="48x48" media="(prefers-color-scheme:light)">
@@ -78,10 +78,6 @@
 		<dd>
 			<p>Audio horror broadcasting online! A client-side audio player with a curated archive of horror, <abbr>SFF</abbr>, and weird fiction radio plays and audiobooks. Uses a blunt, text-based, audio-focused style. Includes over 100 hours of audio footage in over 300 shows. <a href="https://weirdwaves.net/" rel="external">Tune in now!</a></p>
 		</dd>
-		<dt><a href="https://github.com/ellipsisComma/devtool_bookmarklets">Devtool bookmarklets</a></dt>
-		<dd>
-			<p>A collection of tiny and occasionally not-so-tiny bookmarklets for tasks I sometimes find myself doing, from testing how colour schemes appear with colour-blindness to copying the page's live <abbr>HTML</abbr> to clipboard.</p>
-		</dd>
 		<dt><a href="https://github.com/ellipsisComma/simplex-theme-switcher">Simplex theme switcher</a></dt>
 		<dd>
 			<p>A tiny theme switcher that still has all the essential features, and more. Motivated by wanting a theme switcher that approaches the simplicity of colour-scheme media queries without defaulting to light theme.</p>
@@ -93,6 +89,16 @@
 		<dt><a href="https://github.com/ellipsisComma/miscellanea">Miscellanea</a></dt>
 		<dd>
 			<p>Longer code snippets and tests, e.g. a <abbr>CSV</abbr>-<abbr>JSON</abbr> parser that fully implements the closest thing to a <abbr>CSV</abbr> standard. Not meant for production.</p>
+		</dd>
+		<dt>Devtool bookmarklets</dt>
+		<dd>
+			<ul>
+				<li><a href="https://gist.github.com/ellipsisComma/4fe64a36945db63e4ec1bd3689748fd6"><code>colour-blindness</code></a></dt> (adds a colour-blindness simulator)</li>
+				<li><a href="https://gist.github.com/ellipsisComma/8d9ba19b7c142edb7dce376127cf6676"><code>copy-live-html</code></a> (copies a page's live <abbr>HTML</abbr>)</li>
+				<li><a href="https://gist.github.com/ellipsisComma/ed5c6e2f3ae6c77eccb0f6d4123e5ba6"><code>hide-sticky</code></a> (hides various sticky elements)</li>
+				<li><a href="https://gist.github.com/ellipsisComma/9754ded7860c4630403a1309f55bf03d"><code>page-stats</code></a> (counts a page's elements and characters)</li>
+				<li><a href="https://gist.github.com/ellipsisComma/ee186b9f96d6c45cf307e94b0c8acd75"><code>reveal-noscript</code></a> (reveals <code>&lt;noscript&gt;</code> elements)</li>
+			</dl>
 		</dd>
 	</dl>
 </main>
