--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		<dd>
 			<ul>
 				<li><a href="https://gist.github.com/ellipsisComma/4fe64a36945db63e4ec1bd3689748fd6"><code>colour-blindness</code></a></dt> (adds a colour-blindness simulator)</li>
-				<li><a href="https://gist.github.com/ellipsisComma/8d9ba19b7c142edb7dce376127cf6676"><code>copy-live-html</code></a> (copies a page's live <abbr>HTML</abbr>)</li>
+				<li><a href="https://gist.github.com/ellipsisComma/8d9ba19b7c142edb7dce376127cf6676"><code>copy-live-html</code></a> (copies a page's live <abbr>HTML</abbr> to clipboard)</li>
 				<li><a href="https://gist.github.com/ellipsisComma/ed5c6e2f3ae6c77eccb0f6d4123e5ba6"><code>hide-sticky</code></a> (hides various sticky elements)</li>
 				<li><a href="https://gist.github.com/ellipsisComma/9754ded7860c4630403a1309f55bf03d"><code>page-stats</code></a> (counts a page's elements and characters)</li>
 				<li><a href="https://gist.github.com/ellipsisComma/ee186b9f96d6c45cf307e94b0c8acd75"><code>reveal-noscript</code></a> (reveals <code>&lt;noscript&gt;</code> elements)</li>
