only permit 'carcinise' event listener to fire once, even if somehow re-revealed

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 	<h1>Ellipsis Comma</h1>
 
 	<h2>About me</h2>
-	<p>Chris Lazenbatt. United Kingdom. <abbr>BSc.</abbr>, half a <abbr>PhD.</abbr></p>
+	<p>Chris Lazenbatt. United Kingdom. <abbr>BSc</abbr>, half a <abbr>PhD</abbr></p>
 
 	<h2>Background</h2>
 	<p>Computational biology, mitochondrial metabolism. Technical theatre, sound design, lighting design, etc. Font design. Web dev. Broken a few bones a few times.</p>
 
-	<h2>Foreground</h2>	
+	<h2>Foreground</h2>
 	<p>Looking for junior dev positions in companies open to non-traditional applicants. Ready to learn languages and tech stacks. Keen to make usable, accessible technology that works for the public good.</p>
 
 	<h2>Languages</h2>
@@ -113,6 +113,6 @@
 
 
 <script src="ellipsis-comma-load.js?v=2024-11-21"></script>
-<script src="carcinise-light.js?v=2024-11-21"></script>
+<script src="carcinise-light.js?v=2024-12-06"></script>
 </body>
 </html>
