--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
 <div id="container">
 <header>
-	<svg id="logo" viewBox="0 0 11.5 4" aria-label="Ellipsis Comma">
+	<svg id="logo" viewBox="0 0 11.5 4">
+		<title>Ellipsis Comma</title>
 		<defs>
 			<path id="svg-period" d="M0-1c1.4 0 1.4 2 0 2s-1.4-2 0-2" />
 		</defs>
