added links for software, tweaked languages/software <abbr>s

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</g>
 	</svg>
 	<ul id="contact-links" class="flex-list appears-on-pageload">
-		<li><a href="https://github.com/ellipsisComma" rel="external">GitHub</a></li>
+		<li><a href="https://github.com/ellipsisComma">GitHub</a></li>
 		<li><a href="mailto:contact@ellipsiscomma.com">mail</a></li>
 	</ul>
 </header>
@@ -67,13 +67,13 @@
 		<dt>Currently</dt>
 		<dd><abbr>HTML</abbr>, <abbr>CSS</abbr>, JavaScript, <abbr>XSL</abbr></dd>
 		<dt>And also</dt>
-		<dd><abbr>regex</abbr>, shell script, Atom/<abbr>RSS</abbr></dd>
+		<dd><abbr>RegEx</abbr>, shell script, Atom/<abbr>RSS</abbr></dd>
 		<dt>Previously</dt>
-		<dd><abbr>PHP</abbr>, <abbr>MySQL</abbr>, MATLAB</dd>
+		<dd><abbr>PHP</abbr>, <abbr>MySQL</abbr>, <abbr>MATLAB</abbr></dd>
 	</dl>
-	<p>I'm also proficient with <abbr>QLab</abbr>, Glyphs, and the Affinity suite (Publisher, Designer, Photo).</p>
+	<p>I'm also proficient with <a href="https://qlab.app/" rel="external"><abbr>QLab</abbr></a>, <a href="https://glyphsapp.com/" rel="external">Glyphs</a>, and the <a href="https://affinity.serif.com/" rel="external">Affinity suite</a> (Publisher, Designer, Photo).</p>
 
-	<h2>GitHub repos</h2>
+	<h2>GitHub samples</h2>
 	<dl class="info-blocks">
 		<dt><a href="https://github.com/ellipsisComma/weird-waves">Weird Waves</a></dt>
 		<dd>
