--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 	<h1>Ellipsis Comma</h1>
 
 	<h2>About me</h2>
-	<p>Chris Lazenbatt. United Kingdom. <abbr>BSc</abbr>, half a <abbr>PhD</abbr></p>
+	<p>Chris Lazenbatt. United Kingdom. <abbr>BSc</abbr>, half a <abbr>PhD</abbr>.</p>
 
 	<h2>Background</h2>
-	<p>Computational biology, mitochondrial metabolism. Technical theatre, sound design, lighting design, etc. Font design. Web dev. Broken a few bones a few times.</p>
+	<p>Computational biology, mitochondrial metabolism. Technical theatre, sound design, lighting design, etc. Font design. Early steps into web dev. Broken a few bones a few times.</p>
 
 	<h2>Foreground</h2>
 	<p>Looking for junior dev positions in companies open to non-traditional applicants. Ready to learn languages and tech stacks. Keen to make usable, accessible technology that works for the public good.</p>
@@ -71,26 +71,26 @@
 		<dt>Previously</dt>
 		<dd><abbr>PHP</abbr>, <abbr>MySQL</abbr>, <abbr>MATLAB</abbr></dd>
 	</dl>
-	<p>I'm also proficient with <a href="https://qlab.app/" rel="external"><abbr>QLab</abbr></a>, <a href="https://glyphsapp.com/" rel="external">Glyphs</a>, and the <a href="https://affinity.serif.com/" rel="external">Affinity suite</a> (Publisher, Designer, Photo).</p>
+	<p>I'm also proficient with <a href="https://qlab.app/" rel="external"><abbr>QLab</abbr></a>, <a href="https://glyphsapp.com/" rel="external">Glyphs</a>, <a href="https://sigil-ebook.com/" rel="external">Sigil</a>, and the <a href="https://affinity.serif.com/" rel="external">Affinity suite</a> (Publisher, Designer, Photo).</p>
 
 	<h2>GitHub samples</h2>
 	<dl class="info-blocks">
 		<dt><a href="https://github.com/ellipsisComma/weird-waves">Weird Waves</a></dt>
 		<dd>
-			<p>Audio horror broadcasting online! A client-side audio player with a curated archive of horror, <abbr>SFF</abbr>, and weird fiction radio plays and audiobooks. Uses a blunt, text-based, audio-focused style. Includes over 100 hours of audio footage in over 300 shows. <a href="https://weirdwaves.net/" rel="external">Tune in now!</a></p>
+			<p>Audio horror broadcasting online! A client-side audio player with a curated archive of horror, <abbr>SFF</abbr>, and weird fiction radio plays and audiobooks. Presented with a blunt, text-based, audio-focused style. Includes over 100 hours of audio footage in over 300 shows. <a href="https://weirdwaves.net/" rel="external">Tune in now!</a></p>
 		</dd>
 		<dt><a href="https://gist.github.com/ellipsisComma/725c3021f975c76a0a4b18e41f85e5bd">Simplex theme switcher</a></dt>
 		<dd>
-			<p>A tiny theme switcher that still has all the essential features, and more. Motivated by wanting a theme switcher that approaches the simplicity of colour-scheme media queries without defaulting to light theme.</p>
+			<p>A tiny theme switcher that has all the essential features, and more&mdash;approaching the simplicity of colour-scheme media queries without taking away users' site-by-site control or defaulting to light theme.</p>
 		</dd>
 		<dt><a href="https://github.com/ellipsisComma/carcinise">Carcinise bookmarklet</a></dt>
 		<dd>
 			<p>Remember your <abbr>ABC(E)</abbr>: All Become Crab (Eventually).</p>
 		</dd>
-		<dt><a href="https://github.com/ellipsisComma/miscellanea">Miscellanea</a></dt>
+		<!--<dt><a href="https://github.com/ellipsisComma/miscellanea">Miscellanea</a></dt>
 		<dd>
-			<p>Longer code snippets and tests, e.g. a <abbr>CSV</abbr>-<abbr>JSON</abbr> parser that fully implements the closest thing to a <abbr>CSV</abbr> standard. Not meant for production.</p>
-		</dd>
+			<p>Longer code snippets and tests, e.g. a <abbr>CSV</abbr>-<abbr>JSON</abbr> parser that implements the closest thing to a <abbr>CSV</abbr> standard. Not meant for production.</p>
+		</dd>-->
 		<dt>Devtool bookmarklets</dt>
 		<dd>
 			<ul>
