removed Atom/RSS from languages

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<dt>Currently</dt>
 		<dd><abbr>HTML</abbr>, <abbr>CSS</abbr>, JavaScript, <abbr>XSL</abbr></dd>
 		<dt>And also</dt>
-		<dd><abbr>RegEx</abbr>, shell script, Atom/<abbr>RSS</abbr></dd>
+		<dd><abbr>RegEx</abbr>, shell script</dd>
 		<dt>Previously</dt>
 		<dd><abbr>PHP</abbr>, <abbr>MySQL</abbr>, <abbr>MATLAB</abbr></dd>
 	</dl>
