cleaning up CSS

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="preload" type="font/woff2" href="./fonts/PTSerif-Regular-ellipsisComma.woff2?v=2024-11-21" as="font" crossorigin>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" media="screen" href="./main.css?v=2024-12-10b">
+	<link rel="stylesheet" type="text/css" media="screen" href="./main.css?v=2024-12-14">
 
 	<link rel="icon" href="./images/favicon.svg?v=2024-11-22" type="image/svg+xml" sizes="any">
 	<link rel="icon" href="./images/favicon-light.ico?v=2024-11-22" sizes="48x48" media="(prefers-color-scheme:light)">
@@ -71,7 +71,7 @@
 		<dt>Previously</dt>
 		<dd><abbr>PHP</abbr>, <abbr>MySQL</abbr>, <abbr>MATLAB</abbr></dd>
 	</dl>
-	<p>I'm also proficient with <a href="https://qlab.app/" rel="external"><abbr>QLab</abbr></a>, <a href="https://glyphsapp.com/" rel="external">Glyphs</a>, <a href="https://sigil-ebook.com/" rel="external">Sigil</a>, and the <a href="https://affinity.serif.com/" rel="external">Affinity suite</a> (Publisher, Designer, Photo).</p>
+	<p>I'm also proficient with <a href="https://qlab.app/" rel="external"><abbr>QLab</abbr></a>, <a href="https://glyphsapp.com/" rel="external">Glyphs</a>, and the <a href="https://affinity.serif.com/" rel="external">Affinity suite</a> (Publisher, Designer, Photo).</p>
 
 	<h2>GitHub samples</h2>
 	<dl class="info-blocks">
