moved .flex-list styles to #contact-links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="preload" type="font/woff2" href="./fonts/PTSerif-Regular-ellipsisComma.woff2?v=2024-11-21" as="font" crossorigin>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" media="screen" href="./main.css?v=2024-12-14">
+	<link rel="stylesheet" type="text/css" media="screen" href="./main.css?v=2024-12-15">
 
 	<link rel="icon" href="./images/favicon.svg?v=2024-11-22" type="image/svg+xml" sizes="any">
 	<link rel="icon" href="./images/favicon-light.ico?v=2024-11-22" sizes="48x48" media="(prefers-color-scheme:light)">
@@ -42,7 +42,7 @@
 			<path class="appears-on-pageload" d="M9.5 1.5h2l-1.2 2h-1.6z" />
 		</g>
 	</svg>
-	<ul id="contact-links" class="flex-list appears-on-pageload">
+	<ul id="contact-links" class="appears-on-pageload">
 		<li><a href="https://github.com/ellipsisComma">GitHub</a></li>
 		<li><a href="mailto:contact@ellipsiscomma.com">mail</a></li>
 	</ul>
