--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 	<link rel="icon" href="./images/favicon-dark.ico?v=2024-11-22" sizes="48x48" media="(prefers-color-scheme:dark)">
 
 	<meta name="og:image" 		content="https://ellipsiscomma.com/images/social-card.png">
-	<meta name="twitter:card" 	content="summary">
 </head>
 
 
@@ -71,13 +70,13 @@
 		<dt>Previously</dt>
 		<dd><abbr>PHP</abbr>, <abbr>MySQL</abbr>, <abbr>MATLAB</abbr></dd>
 	</dl>
-	<p>I'm also proficient with <a href="https://qlab.app/" rel="external"><abbr>QLab</abbr></a>, <a href="https://glyphsapp.com/" rel="external">Glyphs</a>, and the <a href="https://affinity.serif.com/" rel="external">Affinity suite</a> (Publisher, Designer, Photo).</p>
+	<p>I'm also proficient with <a href="https://qlab.app/"><abbr>QLab</abbr></a>, <a href="https://glyphsapp.com/">Glyphs</a>, and the <a href="https://affinity.serif.com/">Affinity suite</a> (Publisher, Designer, Photo).</p>
 
 	<h2>GitHub samples</h2>
 	<dl class="info-blocks">
 		<dt><a href="https://github.com/ellipsisComma/weird-waves">Weird Waves</a></dt>
 		<dd>
-			<p>Audio horror broadcasting online! A client-side audio player with a curated archive of horror, <abbr>SFF</abbr>, and weird fiction radio plays and audiobooks. Presented with a blunt, text-based, audio-focused style. Includes over 100 hours of audio footage in over 300 shows. <a href="https://weirdwaves.net/" rel="external">Tune in now!</a></p>
+			<p>Audio horror broadcasting online! A client-side audio player with a curated archive of horror, <abbr>SFF</abbr>, and weird fiction radio plays and audiobooks. Presented with a blunt, text-based, audio-focused style. Includes over 100 hours of audio footage in over 300 shows. <a href="https://weirdwaves.net/">Tune in now!</a></p>
 		</dd>
 		<dt><a href="https://gist.github.com/ellipsisComma/725c3021f975c76a0a4b18e41f85e5bd">Simplex theme switcher</a></dt>
 		<dd>
