--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		<dd>
 			<p>Audio horror broadcasting online! A client-side audio player with a curated archive of horror, <abbr>SFF</abbr>, and weird fiction radio plays and audiobooks. Presented with a blunt, text-based, audio-focused style. Includes over 100 hours of audio footage in over 300 shows. <a href="https://weirdwaves.net/">Tune in now!</a></p>
 		</dd>
-		<dt><a href="https://gist.github.com/ellipsisComma/725c3021f975c76a0a4b18e41f85e5bd">Simplex theme switcher</a></dt>
+		<dt><a href="https://gist.github.com/ellipsisComma/725c3021f975c76a0a4b18e41f85e5bd">Limner theme switcher</a></dt>
 		<dd>
 			<p>A tiny theme switcher that has all the essential features, and more&mdash;approaching the simplicity of colour-scheme media queries without taking away users' site-by-site control or defaulting to light theme.</p>
 		</dd>
