--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<dt>And also</dt>
 		<dd><abbr>RegEx</abbr>, shell script</dd>
 		<dt>Previously</dt>
-		<dd><abbr>PHP</abbr>, <abbr>MySQL</abbr>, <abbr>MATLAB</abbr></dd>
+		<dd><abbr>MATLAB</abbr>, <abbr>SBML</abbr>, <abbr>PHP</abbr>, <abbr>MySQL</abbr></dd>
 	</dl>
 	<p>I'm also proficient with <a href="https://qlab.app/"><abbr>QLab</abbr></a>, <a href="https://glyphsapp.com/">Glyphs</a>, and the <a href="https://affinity.serif.com/">Affinity suite</a> (Publisher, Designer, Photo).</p>
 
