replaced some HTML entities with unicode characters

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		</dd>
 		<dt><a href="https://gist.github.com/ellipsisComma/725c3021f975c76a0a4b18e41f85e5bd">Limner theme switcher</a></dt>
 		<dd>
-			<p>A tiny theme switcher that has all the essential features, and more&mdash;approaching the simplicity of colour-scheme media queries without taking away users' site-by-site control or defaulting to light theme.</p>
+			<p>A tiny theme switcher that has all the essential features, and more—approaching the simplicity of colour-scheme media queries without taking away users' site-by-site control or defaulting to light theme.</p>
 		</dd>
 		<dt><a href="https://github.com/ellipsisComma/carcinise">Carcinise bookmarklet</a></dt>
 		<dd>
@@ -100,7 +100,7 @@
 
 
 <footer class="appears-on-pageload">
-	<p>The mitochondrion is the powerhouse of the cell&mdash;<br>and the chemical factory, waste plant, watering hole, and<br><span id="big-red">big red self-destruct button</span></p>
+	<p>The mitochondrion is the powerhouse of the cell—<br>and the chemical factory, waste plant, watering hole, and<br><span id="big-red">big red self-destruct button</span></p>
 </footer>
 </div><!--#container end-->
 
