--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<dt>Previously</dt>
 		<dd><abbr>MATLAB</abbr>, <abbr>SBML</abbr>, <abbr>PHP</abbr>, <abbr>MySQL</abbr>, Perl</dd>
 	</dl>
-	<p>Within these, I'm currently also learning Preact, Bootstrap, and Node.js; beyond, I'm proficient with <a href="https://qlab.app/"><abbr>QLab</abbr></a>, <a href="https://glyphsapp.com/">Glyphs</a>, and the <a href="https://affinity.serif.com/">Affinity suite</a> (Publisher, Designer, Photo).</p>
+	<p>Within these, I'm currently also learning Preact and Bootstrap; beyond, I'm proficient with <a href="https://qlab.app/"><abbr>QLab</abbr></a>, <a href="https://glyphsapp.com/">Glyphs</a>, and the <a href="https://affinity.serif.com/">Affinity suite</a> (Publisher, Designer, Photo).</p>
 
 	<h2>GitHub samples</h2>
 	<dl class="info-blocks">
