--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<dt>Currently</dt>
 		<dd><abbr>HTML</abbr>, <abbr>CSS</abbr>, JavaScript, <abbr>XSL</abbr>, Node<abbr>JS</abbr></dd>
 		<dt>Previously</dt>
-		<dd><abbr>MATLAB</abbr>, <abbr>SBML</abbr>, <abbr>PHP</abbr>, <abbr>MySQL</abbr>, Perl</dd>
+		<dd><abbr>MATLAB</abbr>, <abbr>PHP</abbr>, <abbr>MySQL</abbr>, Perl</dd>
 	</dl>
 	<p>Within these, I'm currently also learning Preact and Bootstrap; beyond, I'm proficient with <a href="https://qlab.app/"><abbr>QLab</abbr></a>, <a href="https://glyphsapp.com/">Glyphs</a>, and the <a href="https://affinity.serif.com/">Affinity suite</a> (Publisher, Designer, Photo).</p>
 
