Moved scripts from end of <body> to <head>, with carcinise-light.js being [deferred]

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 	<link rel="icon" href="./images/favicon-dark.ico?v=2024-11-22" sizes="48x48" media="(prefers-color-scheme:dark)">
 
 	<meta name="og:image" 		content="https://ellipsiscomma.com/images/social-card.png">
+
+	<script src="ellipsis-comma-load.js?v=2024-11-21"></script>
+	<script src="carcinise-light.js?v=2025-04-08" defer></script>
 </head>
 
 
@@ -103,10 +106,5 @@
 	<p>The mitochondrion is the powerhouse of the cell—<br>and the chemical factory, waste plant, watering hole, and<br><span id="big-red">big red self-destruct button</span></p>
 </footer>
 </div><!--#container end-->
-
-
-
-<script src="ellipsis-comma-load.js?v=2024-11-21"></script>
-<script src="carcinise-light.js?v=2025-04-08"></script>
 </body>
 </html>
