Removed ellipsiscomma.com domain name; use default .github.io domain from now on

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link rel="icon" href="./images/favicon-light.ico?v=2024-11-22" sizes="48x48" media="(prefers-color-scheme:light)">
 	<link rel="icon" href="./images/favicon-dark.ico?v=2024-11-22" sizes="48x48" media="(prefers-color-scheme:dark)">
 
-	<meta name="og:image" 		content="https://ellipsiscomma.com/images/social-card.png">
+	<meta name="og:image" 		content="https://ellipsiscomma.github.io/images/social-card.png">
 
 	<script src="ellipsis-comma-load.js?v=2024-11-21"></script>
 	<script src="carcinise-light.js?v=2025-04-08" defer></script>
@@ -42,7 +42,7 @@
 	</svg>
 	<ul id="contact-links" class="appears-on-pageload">
 		<li><a href="https://github.com/ellipsisComma">GitHub</a></li>
-		<li><a href="mailto:contact@ellipsiscomma.com">mail</a></li>
+		<li><a href="mailto:chris.lazenbatt@protonmail.com">mail</a></li>
 	</ul>
 </header>
 
