Tweaks (profile and language order)

--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
 	<p>Chris Lazenbatt. United Kingdom. <abbr>BSc</abbr>, half a <abbr>PhD</abbr>.</p>
 
 	<h2>Background</h2>
-	<p>Computational biology, mitochondrial metabolism. Technical theatre, sound design, lighting design, etc. Font design. Early steps into web dev. Broken a few bones a few times.</p>
+	<p>Computational biology, mitochondrial metabolism. Technical theatre, sound design, lighting design, etc. Font design. Early steps into web dev. Broken a few bones a few times (mostly a long time ago).</p>
 
 	<h2>Foreground</h2>
-	<p>Looking for junior dev positions in companies open to non-traditional applicants. Ready to learn languages and tech stacks. Keen to make usable, accessible technology that works for the public good.</p>
+	<p>Looking for junior positions in companies open to non-traditional applicants. Ready to learn processes, systems, and languages. Keen to help make and support technology for the public good.</p>
 
 	<h2>Languages</h2>
 	<dl class="info-grid">
 		<dt>Currently</dt>
-		<dd><abbr>HTML</abbr>, <abbr>CSS</abbr>, JavaScript, <abbr>XSL</abbr>, Node<abbr>JS</abbr></dd>
+		<dd><abbr>HTML</abbr>, <abbr>CSS</abbr>, JavaScript, <abbr>XSL</abbr>, Perl, Node<abbr>JS</abbr></dd>
 		<dt>Previously</dt>
-		<dd><abbr>MATLAB</abbr>, <abbr>PHP</abbr>, <abbr>MySQL</abbr>, Perl</dd>
+		<dd><abbr>MATLAB</abbr>, <abbr>PHP</abbr>, <abbr>MySQL</abbr></dd>
 	</dl>
 	<p>Within these, I'm currently also learning Preact and Bootstrap; beyond, I'm proficient with <a href="https://qlab.app/"><abbr>QLab</abbr></a>, <a href="https://glyphsapp.com/">Glyphs</a>, and the <a href="https://affinity.serif.com/">Affinity suite</a> (Publisher, Designer, Photo).</p>
 
