Fix: 'tester' to 'simulator' (it simulates, not tests)

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		<dd>
 			<p>A client-side audio player with a curated archive of horror, <abbr>SFF</abbr>, and weird fiction radio plays and audiobooks. Presented with a blunt, text-based, audio-focused style. <a href="https://scarewaves.com/">Tune in now!</a></p>
 		</dd>
-		<dt><a href="https://gist.github.com/ellipsisComma/4fe64a36945db63e4ec1bd3689748fd6">Colour vision deficiency tester bookmarklet</a></dt>
+		<dt><a href="https://gist.github.com/ellipsisComma/4fe64a36945db63e4ec1bd3689748fd6">Colour vision deficiency simulator bookmarklet</a></dt>
 		<dd>
 			<p>A small bookmarklet widget that allows you to simulate various forms of colour vision deficiency (a.k.a. colour blindness) in the browser.</p>
 		</dd>
