added 'interactive-widget=resizes-content' header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="preload" type="font/woff2" href="./fonts/Roboto-Medium-ellipsisComma.woff2?v=2024-11-21" as="font" crossorigin>
 	<link rel="preload" type="font/woff2" href="./fonts/PTSerif-Regular-ellipsisComma.woff2?v=2024-11-21" as="font" crossorigin>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, interactive-widget=resizes-content">
 	<link rel="stylesheet" type="text/css" media="screen" href="./main.css?v=2025-10-17">
 
 	<link rel="icon" href="./images/favicon.svg?v=2024-11-22" type="image/svg+xml" sizes="any">
